# SlicerIGSIO

./: CMakeLists.txt  CTestConfig.cmake  README.md  SlicerIGSIO.xcf  SuperBuild.cmake
Images/: IGSIO.xcf  SlicerIGSIOLogo.xcf  VideoIO.xcf
MetafileImporter/: CMakeLists.txt  qSlicerMetafileIOOptionsWidget.cxx  qSlicerMetafileIOOptionsWidget.h  qSlicerMetafileImporterModule.h  qSlicerMetafileReader.cxx  qSlicerMetafileReader.h
MetafileImporter/Logic/: vtkSlicerMetafileImporterLogic.cxx  vtkSlicerMetafileImporterLogic.h
MetafileImporter/Resources/UI/: qSlicerMetafileIOOptionsWidget.ui
SequenceIO/: CMakeLists.txt  qSlicerSequenceIOModule.cxx  qSlicerSequenceIOModule.h  qSlicerSequenceIOReader.cxx  qSlicerSequenceIOReader.h
SequenceIO/Logic/: CMakeLists.txt  vtkSlicerSequenceIOLogic.cxx  vtkSlicerSequenceIOLogic.h
SequenceIO/MRML/: CMakeLists.txt  vtkMRMLStreamingVolumeSequenceStorageNode.cxx  vtkMRMLStreamingVolumeSequenceStorageNode.h
SlicerIGSIOCommon/: CMakeLists.txt  vtkSlicerIGSIOCommon.cxx  vtkSlicerIGSIOCommon.h  vtkSlicerIGSIOLogger.cxx  vtkSlicerIGSIOLogger.h  vtkSlicerRtCommonWin32Header.h
SuperBuild/: External_IGSIO.cmake  External_VP9.cmake  External_YASM.cmake  External_libwebm.cmake
VideoIO/: CMakeLists.txt  qSlicerVideoIOModule.cxx  qSlicerVideoIOModule.h  qSlicerVideoIOModuleWidget.cxx  qSlicerVideoIOModuleWidget.h  qSlicerVideoReader.cxx  qSlicerVideoReader.h
VideoIO/Codecs/: CMakeLists.txt  vtkVP9VolumeCodec.cxx  vtkVP9VolumeCodec.h
VideoIO/Logic/: CMakeLists.txt  vtkSlicerVideoIOLogic.cxx  vtkSlicerVideoIOLogic.h
VideoIO/MRML/: CMakeLists.txt  vtkMRMLStreamingVolumeSequenceStorageNode.cxx  vtkMRMLStreamingVolumeSequenceStorageNode.h
VideoIO/Resources/: qSlicerVideoIOModule.qrc
VideoIO/Resources/UI/: qSlicerVideoIOModule.ui
VideoIO/Testing/: CMakeLists.txt  vtkEncodeUncompressedSequenceTest.cxx
VideoIO/Widgets/: CMakeLists.txt  qSlicerVideoIOModuleWidget.cxx  qSlicerVideoIOModuleWidget.h
VideoUtil/: CMakeLists.txt  qSlicerVideoUtilModule.cxx  qSlicerVideoUtilModule.h  qSlicerVideoUtilModuleWidget.cxx  qSlicerVideoUtilModuleWidget.h  qSlicerVideoUtilReader.cxx  qSlicerVideoUtilReader.h
VideoUtil/Logic/: CMakeLists.txt  vtkSlicerVideoUtilLogic.cxx  vtkSlicerVideoUtilLogic.h
VideoUtil/Resources/: qSlicerVideoUtilModule.qrc
VideoUtil/Resources/UI/: qSlicerVideoUtilModule.ui
VideoUtil/Testing/: CMakeLists.txt  vtkEncodeUncompressedSequenceTest.cxx
VideoUtil/Testing/Cxx/: CMakeLists.txt  vtkEncodeUncompressedSequenceTest.cxx
VolumeReconstruction/: CMakeLists.txt  qSlicerVolumeReconstructionModule.cxx  qSlicerVolumeReconstructionModule.h  qSlicerVolumeReconstructionModuleWidget.cxx  qSlicerVolumeReconstructionModuleWidget.h
VolumeReconstruction/Logic/: CMakeLists.txt  vtkSlicerVolumeReconstructionLogic.cxx  vtkSlicerVolumeReconstructionLogic.h
VolumeReconstruction/MRML/: CMakeLists.txt  vtkMRMLVolumeReconstructionNode.cxx  vtkMRMLVolumeReconstructionNode.h
VolumeReconstruction/Resources/UI/: qSlicerVolumeReconstructionModule.ui
